[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.8.3", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]

[tool.codespell]
ignore-words-list = "checkin"

[tool.poe.tasks]
install = ["lock", "update", "install_dev"]
install_dev = "poetry install --with dev"
lint = "poetry run ruff check --fix ."
lock = "poetry lock --no-cache --regenerate"
precommit = ["lint"]
run_all = {sequence = ["install", "lint", "test"]}
test = "poetry run pytest -rav ."
update = "poetry update --no-interaction"

[tool.poetry]
authors = ["Aten Engineering <engineering@atensecurity.com>"]
description = "AI agent governance SDK by Aten Security"
name = "aten-thoth"
packages = [{include = "thoth"}]
readme = "README.md"
version = "0.1.5"

[tool.poetry.dependencies]
anyio = ">=4.0"
boto3 = ">=1.34"
httpx = ">=0.27"
pydantic = ">=2.0"
python = ">=3.12,<3.15"

[tool.poetry.extras]
anthropic = ["anthropic"]
autogen = ["pyautogen"]
langchain = ["langchain-core"]
openai = ["openai"]

[tool.poetry.group.codespell.dependencies]
codespell = "2.4.2"

[tool.poetry.group.dev.dependencies]
moto = {extras = ["sqs"], version = "==5.1.22"}
poethepoet = "0.34.0"
pytest = "==9.0.3"
pytest-asyncio = "==1.3.0"
respx = "==0.22.0"
ruff = "==0.15.6"

[tool.poetry.group.extras.dependencies]
anthropic = {version = ">=0.40", optional = true}
langchain-core = {version = ">=0.2", optional = true}
openai = {version = ">=1.50", optional = true}
pyautogen = {version = ">=0.2", optional = true}

[tool.poetry.urls]
Documentation = "https://docs.atensecurity.com"
Homepage = "https://atensecurity.com/thoth"
Repository = "https://github.com/atensecurity/thoth-py"

[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"**/instrumentor.py" = ["PLC0415"]
"tests/**/*" = ["ARG", "S101"]
